--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,51 @@
+body{
+  margin:auto;
+  max-width: 1440px;
+  position:relative;
+}
+.signup-container {
+  background-color: #002DCA;
+  background-size: cover;
+  background-position: center;
+  height: 100vh; /* Adjust the height as needed */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  margin:0px,
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container-fluid {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.row {
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.sidebar {
+  height: 100vh;
+  transition: transform 0.3s ease, width 0.3s ease; 
+}
+
+.visible {
+  transform: translateX(0);
+}
+
+.hidden {
+  transform: translateX(-100%);
+  width: 0; 
+  position: absolute; 
+}
+
+.main-content {
+  width: 100%; 
+  transition: margin-left 0.3s ease; 
+}
+
+.visible .main-content {
+  margin-left: 250px; 
 }
