modify the dashboard

--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,7 @@ body {
   overflow: hidden;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
   margin-top: "15%";
+  justify-content:space-between;
 }
 .search-component{
   margin: auto;
